解密的时候  字符流的单位长度要和 密钥长度匹配，是倍数关系