@@ -1,4 +1,5 @@
 package activemq.xmg.com.ras_android.encrypt;
+
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -30,110 +31,70 @@ import activemq.xmg.com.ras_android.sign.Base64;
  * @author Mr.Zheng
  * @date 2014年8月22日 下午1:44:23
  */
-public final class RSAUtils
-{
+public final class RSAUtils {
     /*android客户端用这个*/
+//    private static String RSA = "RSA";
     private static String RSA = "RSA/ECB/PKCS1Padding";
+    //    private static String RSA = "RSA/ECB/PKCS5Padding";
+//    private static String RSA = "RSA/None/PKCS1Padding";
+//    private static String RSA = "RSA/ECB/NoPadding";
     /*java 服务器端用这个*/
 //    private static String RSA = "RSA";
-    
-    
+    private static int length = 2048;
+
+
     /**
      * 随机生成RSA密钥对(默认密钥长度为1024)
      *
      * @return
      */
-    public static KeyPair generateRSAKeyPair()
-    {
-        return generateRSAKeyPair(1024);
+    public static KeyPair generateRSAKeyPair() {
+        return generateRSAKeyPair(length);
     }
 
     /**
      * 随机生成RSA密钥对
      *
-     * @param keyLength
-     *            密钥长度，范围：512～2048<br>
-     *            一般1024
+     * @param keyLength 密钥长度，范围：512～2048<br>
+     *                  一般1024
      * @return
      */
-    public static KeyPair generateRSAKeyPair(int keyLength)
-    {
-        try
-        {
+    public static KeyPair generateRSAKeyPair(int keyLength) {
+        try {
             KeyPairGenerator kpg = KeyPairGenerator.getInstance(RSA);
             kpg.initialize(keyLength);
             return kpg.genKeyPair();
-        } catch (NoSuchAlgorithmException e)
-        {
+        } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
             return null;
         }
     }
-    /**
-     * 使用公钥对明文进行加密
-     * @param publicKey      公钥
-     * @param plainText      明文
-     * @return
-     */
-    public static String encrypt(String publicKey, String plainText){
-        try {
-            Cipher cipher = Cipher.getInstance(RSA);
-            cipher.init(Cipher.ENCRYPT_MODE,getPublicKey(publicKey));
-            byte[] bytes = plainText.getBytes();
-            ByteArrayInputStream read = new ByteArrayInputStream(bytes);
-            ByteArrayOutputStream write = new ByteArrayOutputStream();
-            byte [] buf=new byte[117];
-            int len=0;
-            while ( (len=read.read(buf))!=-1 ){
-                byte [] buf1=null;
-                if(buf.length==len){
-                    buf1=buf;
-                }else{
-                    buf1=new byte[len];
-                    for (int i = 0; i < len; i++) {
-                        buf1[i]=buf[i];
-                    }
-                }
-                byte[] bytes1 = cipher.doFinal(buf1);
-                write.write(bytes1);
-            }
-            return Base64.encode(write.toByteArray());
-        } catch (InvalidKeyException e) {
-            e.printStackTrace();
-        } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (BadPaddingException e) {
-            e.printStackTrace();
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
-    }
 
     /**
      * 使用私钥对密文进行解密
-     * @param privateKey       私钥
-     * @param enStr            密文
+     *
+     * @param privateKey 私钥
+     * @param enStr      密文
      * @return
      */
-    public static String decrypt(String privateKey, String enStr){
+    public static String decrypt(String privateKey, String enStr) {
         try {
             Cipher cipher = Cipher.getInstance(RSA);
-            cipher.init(Cipher.DECRYPT_MODE, getPrivateKey(privateKey));
-
-            byte[] bytes =Base64.decode(enStr);
+            cipher.init(Cipher.DECRYPT_MODE, getPublicKey(privateKey));
+            byte[] bytes = Base64.decode(enStr);
             ByteArrayInputStream read = new ByteArrayInputStream(bytes);
             ByteArrayOutputStream write = new ByteArrayOutputStream();
-            byte [] buf=new byte[128];
-            int len=0;
-            while ( (len=read.read(buf))!=-1 ){
-                byte [] buf1=null;
-                if(buf.length==len){
-                    buf1=buf;
-                }else{
-                    buf1=new byte[len];
+//            byte[] buf = new byte[128];
+            byte[] buf = new byte[length / 8];
+            int len = 0;
+            while ((len = read.read(buf)) != -1) {
+                byte[] buf1 = null;
+                if (buf.length == len) {
+                    buf1 = buf;
+                } else {
+                    buf1 = new byte[len];
                     for (int i = 0; i < len; i++) {
-                        buf1[i]=buf[i];
+                        buf1[i] = buf[i];
                     }
                 }
                 byte[] bytes1 = cipher.doFinal(buf1);
@@ -154,18 +115,60 @@ public final class RSAUtils
         return null;
     }
 
+    /**
+     * 使用公钥对明文进行加密
+     *
+     * @param publicKey 公钥
+     * @param plainText 明文
+     * @return
+     */
+    public static String encrypt(String publicKey, String plainText) {
+        try {
+            Cipher cipher = Cipher.getInstance(RSA);
+//            cipher.init(Cipher.ENCRYPT_MODE, getPublicKey(publicKey));
+            cipher.init(Cipher.ENCRYPT_MODE, getPrivateKey(publicKey));
+            byte[] bytes = plainText.getBytes();
+            ByteArrayInputStream read = new ByteArrayInputStream(bytes);
+            ByteArrayOutputStream write = new ByteArrayOutputStream();
+            byte[] buf = new byte[117];
+//            byte[] buf = new byte[172];
+            int len = 0;
+            while ((len = read.read(buf)) != -1) {
+                byte[] buf1 = null;
+                if (buf.length == len) {
+                    buf1 = buf;
+                } else {
+                    buf1 = new byte[len];
+                    for (int i = 0; i < len; i++) {
+                        buf1[i] = buf[i];
+                    }
+                }
+                byte[] bytes1 = cipher.doFinal(buf1);
+                write.write(bytes1);
+            }
+            return Base64.encode(write.toByteArray());
+        } catch (InvalidKeyException e) {
+            e.printStackTrace();
+        } catch (IllegalBlockSizeException e) {
+            e.printStackTrace();
+        } catch (BadPaddingException e) {
+            e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
 
     /**
      * 得到公钥
      *
-     * @param key
-     *            密钥字符串（经过base64编码）
+     * @param key 密钥字符串（经过base64编码）
      * @throws Exception
      */
     public static PublicKey getPublicKey(String key) throws Exception {
         byte[] keyBytes;
-//        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
-        keyBytes= Base64.decode(key);
+        keyBytes = Base64.decode(key);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         PublicKey publicKey = keyFactory.generatePublic(keySpec);
@@ -175,14 +178,13 @@ public final class RSAUtils
     /**
      * 得到私钥
      *
-     * @param key
-     *            密钥字符串（经过base64编码）
+     * @param key 密钥字符串（经过base64编码）
      * @throws Exception
      */
     public static PrivateKey getPrivateKey(String key) throws Exception {
         byte[] keyBytes;
 //        keyBytes = (new BASE64Decoder()).decodeBuffer(key);
-        keyBytes=Base64.decode(key);
+        keyBytes = Base64.decode(key);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
         PrivateKey privateKey = keyFactory.generatePrivate(keySpec);
@@ -191,27 +193,23 @@ public final class RSAUtils
 
 
     //=============================================================================================
+
     /**
      * 用公钥加密 <br>
      * 每次加密的字节数，不能超过密钥的长度值减去11
      *
      * @param
-     *
      * @param
-     *
      * @return 加密后的byte型数据
      */
-    public static byte[] encryptData(byte[] data, PublicKey publicKey)
-    {
-        try
-        {
+    public static byte[] encryptData(byte[] data, PublicKey publicKey) {
+        try {
             Cipher cipher = Cipher.getInstance(RSA);
             // 编码前设定编码方式及密钥
             cipher.init(Cipher.ENCRYPT_MODE, publicKey);
             // 传入编码数据并返回编码结果
             return cipher.doFinal(data);
-        } catch (Exception e)
-        {
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
         }
@@ -220,21 +218,16 @@ public final class RSAUtils
     /**
      * 用私钥解密
      *
-     * @param encryptedData
-     *            经过encryptedData()加密返回的byte数据
-     * @param privateKey
-     *            私钥
+     * @param encryptedData 经过encryptedData()加密返回的byte数据
+     * @param privateKey    私钥
      * @return
      */
-    public static byte[] decryptData(byte[] encryptedData, PrivateKey privateKey)
-    {
-        try
-        {
+    public static byte[] decryptData(byte[] encryptedData, PrivateKey privateKey) {
+        try {
             Cipher cipher = Cipher.getInstance(RSA);
             cipher.init(Cipher.DECRYPT_MODE, privateKey);
             return cipher.doFinal(encryptedData);
-        } catch (Exception e)
-        {
+        } catch (Exception e) {
             return null;
         }
     }
@@ -248,8 +241,7 @@ public final class RSAUtils
      * @throws InvalidKeySpecException
      */
     public static PublicKey getPublicKey(byte[] keyBytes) throws NoSuchAlgorithmException,
-            InvalidKeySpecException
-    {
+            InvalidKeySpecException {
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance(RSA);
         PublicKey publicKey = keyFactory.generatePublic(keySpec);
@@ -265,8 +257,7 @@ public final class RSAUtils
      * @throws InvalidKeySpecException
      */
     public static PrivateKey getPrivateKey(byte[] keyBytes) throws NoSuchAlgorithmException,
-            InvalidKeySpecException
-    {
+            InvalidKeySpecException {
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance(RSA);
         PrivateKey privateKey = keyFactory.generatePrivate(keySpec);
@@ -283,8 +274,7 @@ public final class RSAUtils
      * @throws InvalidKeySpecException
      */
     public static PublicKey getPublicKey(String modulus, String publicExponent)
-            throws NoSuchAlgorithmException, InvalidKeySpecException
-    {
+            throws NoSuchAlgorithmException, InvalidKeySpecException {
         BigInteger bigIntModulus = new BigInteger(modulus);
         BigInteger bigIntPrivateExponent = new BigInteger(publicExponent);
         RSAPublicKeySpec keySpec = new RSAPublicKeySpec(bigIntModulus, bigIntPrivateExponent);
@@ -303,8 +293,7 @@ public final class RSAUtils
      * @throws InvalidKeySpecException
      */
     public static PrivateKey getPrivateKey(String modulus, String privateExponent)
-            throws NoSuchAlgorithmException, InvalidKeySpecException
-    {
+            throws NoSuchAlgorithmException, InvalidKeySpecException {
         BigInteger bigIntModulus = new BigInteger(modulus);
         BigInteger bigIntPrivateExponent = new BigInteger(privateExponent);
         RSAPublicKeySpec keySpec = new RSAPublicKeySpec(bigIntModulus, bigIntPrivateExponent);
@@ -316,27 +305,20 @@ public final class RSAUtils
     /**
      * 从字符串中加载公钥
      *
-     * @param publicKeyStr
-     *            公钥数据字符串
-     * @throws Exception
-     *             加载公钥时产生的异常
+     * @param publicKeyStr 公钥数据字符串
+     * @throws Exception 加载公钥时产生的异常
      */
-    public static PublicKey loadPublicKey(String publicKeyStr) throws Exception
-    {
-        try
-        {
+    public static PublicKey loadPublicKey(String publicKeyStr) throws Exception {
+        try {
             byte[] buffer = Base64Utils.decode(publicKeyStr);
             KeyFactory keyFactory = KeyFactory.getInstance(RSA);
             X509EncodedKeySpec keySpec = new X509EncodedKeySpec(buffer);
             return (RSAPublicKey) keyFactory.generatePublic(keySpec);
-        } catch (NoSuchAlgorithmException e)
-        {
+        } catch (NoSuchAlgorithmException e) {
             throw new Exception("无此算法");
-        } catch (InvalidKeySpecException e)
-        {
+        } catch (InvalidKeySpecException e) {
             throw new Exception("公钥非法");
-        } catch (NullPointerException e)
-        {
+        } catch (NullPointerException e) {
             throw new Exception("公钥数据为空");
         }
     }
@@ -349,23 +331,18 @@ public final class RSAUtils
      * @return
      * @throws Exception
      */
-    public static PrivateKey loadPrivateKey(String privateKeyStr) throws Exception
-    {
-        try
-        {
+    public static PrivateKey loadPrivateKey(String privateKeyStr) throws Exception {
+        try {
             byte[] buffer = Base64Utils.decode(privateKeyStr);
             // X509EncodedKeySpec keySpec = new X509EncodedKeySpec(buffer);
             PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(buffer);
             KeyFactory keyFactory = KeyFactory.getInstance(RSA);
             return (RSAPrivateKey) keyFactory.generatePrivate(keySpec);
-        } catch (NoSuchAlgorithmException e)
-        {
+        } catch (NoSuchAlgorithmException e) {
             throw new Exception("无此算法");
-        } catch (InvalidKeySpecException e)
-        {
+        } catch (InvalidKeySpecException e) {
             throw new Exception("私钥非法");
-        } catch (NullPointerException e)
-        {
+        } catch (NullPointerException e) {
             throw new Exception("私钥数据为空");
         }
     }
@@ -373,21 +350,15 @@ public final class RSAUtils
     /**
      * 从文件中输入流中加载公钥
      *
-     * @param in
-     *            公钥输入流
-     * @throws Exception
-     *             加载公钥时产生的异常
+     * @param in 公钥输入流
+     * @throws Exception 加载公钥时产生的异常
      */
-    public static PublicKey loadPublicKey(InputStream in) throws Exception
-    {
-        try
-        {
+    public static PublicKey loadPublicKey(InputStream in) throws Exception {
+        try {
             return loadPublicKey(readKey(in));
-        } catch (IOException e)
-        {
+        } catch (IOException e) {
             throw new Exception("公钥数据流读取错误");
-        } catch (NullPointerException e)
-        {
+        } catch (NullPointerException e) {
             throw new Exception("公钥输入流为空");
         }
     }
@@ -396,20 +367,15 @@ public final class RSAUtils
      * 从文件中加载私钥
      *
      * @param
-     *
      * @return 是否成功
      * @throws Exception
      */
-    public static PrivateKey loadPrivateKey(InputStream in) throws Exception
-    {
-        try
-        {
+    public static PrivateKey loadPrivateKey(InputStream in) throws Exception {
+        try {
             return loadPrivateKey(readKey(in));
-        } catch (IOException e)
-        {
+        } catch (IOException e) {
             throw new Exception("私钥数据读取错误");
-        } catch (NullPointerException e)
-        {
+        } catch (NullPointerException e) {
             throw new Exception("私钥输入流为空");
         }
     }
@@ -421,18 +387,14 @@ public final class RSAUtils
      * @return
      * @throws IOException
      */
-    private static String readKey(InputStream in) throws IOException
-    {
+    private static String readKey(InputStream in) throws IOException {
         BufferedReader br = new BufferedReader(new InputStreamReader(in));
         String readLine = null;
         StringBuilder sb = new StringBuilder();
-        while ((readLine = br.readLine()) != null)
-        {
-            if (readLine.charAt(0) == '-')
-            {
+        while ((readLine = br.readLine()) != null) {
+            if (readLine.charAt(0) == '-') {
                 continue;
-            } else
-            {
+            } else {
                 sb.append(readLine);
                 sb.append('\r');
             }
@@ -446,8 +408,7 @@ public final class RSAUtils
      *
      * @param publicKey
      */
-    public static void printPublicKeyInfo(PublicKey publicKey)
-    {
+    public static void printPublicKeyInfo(PublicKey publicKey) {
         RSAPublicKey rsaPublicKey = (RSAPublicKey) publicKey;
         System.out.println("----------RSAPublicKey----------");
         System.out.println("Modulus.length=" + rsaPublicKey.getModulus().bitLength());
@@ -456,8 +417,7 @@ public final class RSAUtils
         System.out.println("PublicExponent=" + rsaPublicKey.getPublicExponent().toString());
     }
 
-    public static void printPrivateKeyInfo(PrivateKey privateKey)
-    {
+    public static void printPrivateKeyInfo(PrivateKey privateKey) {
         RSAPrivateKey rsaPrivateKey = (RSAPrivateKey) privateKey;
         System.out.println("----------RSAPrivateKey ----------");
         System.out.println("Modulus.length=" + rsaPrivateKey.getModulus().bitLength());
